--- a/src/main.scss
+++ b/src/main.scss
@@ -1,13 +1,12 @@
-/** postcss-bem-linter: define main-component; weak */
-$color: #555;
+/*stylelint-disable*/
 
-.main-component {
-  &__title {
-    color: $color;
-  }
-}
+//helpers
+@import "scss/helpers/reset.scss";
+@import "scss/helpers/parameters.scss";
+@import "scss/helpers/mixins.scss";
 
-/** postcss-bem-linter: define utilities */
-.u-ellipsis {
-  color: $color;
-}
+//pages
+@import "scss/layouts/main-page.scss";
+
+//layouts
+@import "scss/pages/main-page.scss";
