--- a/src/scss/helpers/_parameters.scss
+++ b/src/scss/helpers/_parameters.scss
@@ -11,3 +11,6 @@ $Raleway-extra-light: 'Raleway', sans-serif;
 $Raleway-semi-bold: 'Raleway:600', sans-serif;
 $Open-sans-regular: 'Open Sans', sans-serif;
 
+//Transitions
+$transition: all 0.2s;
+
