--- a/src/main.scss
+++ b/src/main.scss
@@ -5,8 +5,11 @@
 @import "scss/helpers/parameters.scss";
 @import "scss/helpers/mixins.scss";
 
-//pages
+//components
 @import "scss/layouts/main-page.scss";
 
 //layouts
-@import "scss/pages/main-page.scss";
+@import "scss/components/container.scss";
+@import "scss/components/header.scss";
+@import "scss/components/main-content.scss";
+@import "scss/components/scroll-element.scss";
