--- a/src/scss/components/_scroll-element.scss
+++ b/src/scss/components/_scroll-element.scss
@@ -1,22 +1,34 @@
 /*stylelint-disable*/
 
 .bottom-button {
-  width: 89px;
-  height: 89px;
+  z-index: 1;
+  width: 94px;
+  height: 94px;
   background-color: $color-third;
-  border: none;
   position: absolute;
   border-radius: 5px;
-  top: 95.5%;
+  top: 95.2%;
+  border: none;
   transform: rotate(45deg);
 }
 
 .bottom-button-text {
   position: absolute;
   color: $color-second;
-  font-size: 13px;
+  font-size: 14px;
   text-transform: uppercase;
-  top: 19%;
-  right: 52%;
+  top: 20%;
+  right: 49%;
+  transform: rotate(-45deg);
+}
+
+.bottom-button-text-2 {
+  display: none;
+  position: absolute;
+  color: $color-second;
+  font-size: 14px;
+  text-transform: uppercase;
+  top: 20%;
+  right: 49%;
   transform: rotate(-45deg);
 }
