--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1,17 +1,23 @@
 /*stylelint-disable*/
 
 .container {
-  width: 320px;
-  height: 530px;
+  width: 1440px;
+  height: 900px;
+  background-image: url("../../../images/jpg-files/bg_image.jpg");
+  background-repeat: no-repeat;
+  background-size: 180% 190%;
+  background-position: 68% 34%;
   @include flex-box(column, flex-start, center);
   position: relative;
   overflow: hidden;
 }
 
 .test-image {
+  width: 1440px;
+  height: 900px;
+  z-index: 10;
+  opacity: 0.5;
   position: absolute;
   top:0;
-  left:0;
-  width: 320px;
-  height: 530px;
+  left: 0;
 }
