--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -76,7 +76,7 @@
   transition: $transition;
   &:hover {
     background-color: $color-third;
-    color: $color-second;
+    color: $color-first;
   }
 }
 
