--- a/src/scss/components/_scroll-element.scss
+++ b/src/scss/components/_scroll-element.scss
@@ -1,6 +1,6 @@
 /*stylelint-disable*/
 
-.bottom-button {
+.bottom-nav-link {
   z-index: 1;
   width: 94px;
   height: 94px;
@@ -10,9 +10,10 @@
   top: 95.2%;
   border: none;
   transform: rotate(45deg);
+  font-family: $Open-sans-regular;
 }
 
-.bottom-button-text {
+.bottom-nav-link-text {
   position: absolute;
   color: $color-second;
   font-size: 14px;
@@ -22,7 +23,7 @@
   transform: rotate(-45deg);
 }
 
-.bottom-button-text-2 {
+.bottom-nav-link-text-2 {
   display: none;
   position: absolute;
   color: $color-second;
