--- a/src/scss/layouts/_main-content.scss
+++ b/src/scss/layouts/_main-content.scss
@@ -2,9 +2,8 @@
 
 .main-content {
   @include respond-to(mobile) {
-    margin-top: 46px;
+    margin-top: 5.5%;
     width: 69%;
-
   }
 }
 
@@ -12,8 +11,8 @@
   @include respond-to(mobile) {
     color: $color-third;
     width: 100%;
-    font-size: 22px;
-    line-height: 30px;
+    font-size: 5.8vw;
+    line-height: 23px;
   }
 }
 
@@ -23,55 +22,77 @@
   }
 }
 
-.image-wrapper {
+.circle-square-image {
   @include respond-to(mobile) {
-    width: 80px;
-    height: 80px;
-    margin-top: 27px;
+    width: 64px;
+    height: 64px;
+    margin-top: 9.5%;
     margin-bottom: 0;
   }
 }
 
 .content-main-sub-text {
   @include respond-to(mobile) {
-    font-size: 14px;
-    margin-top: 28px;
-    line-height: 23px;
-    letter-spacing: -1px;
+    font-size: 0.62rem;
+    line-height: 19px;
+    margin-top: 10.3%;
+    letter-spacing: -0.54px;
   }
 }
 
 .contact-list {
   @include respond-to(mobile) {
-    margin-top: 40px;
+    margin-top: 11.5%;
     @include flex-box(column, center, space-between);
   }
 }
 
 .contact-element {
   @include respond-to(mobile) {
-    margin-bottom: 37px;
-    margin-left: 6px;
+    margin-bottom: 10.5%;
+    margin-left: 3%;
     @include flex-box(row, center, center);
+    &:last-child {
+      margin-top: -1.1%;
+    }
   }
 }
 
 .contact-element-link {
   @include respond-to(mobile) {
-    font-size: 14px;
     @include flex-box(row, center, center);
   }
 }
 
 .contact-element-icon {
   @include respond-to(mobile) {
-    width: 20px;
-    height: 20px;
+    width: 9%;
+    @include flex-box(row, center, center);
+    &:after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
+  }
+}
+
+.contact-element-icon-google {
+  @include respond-to(mobile) {
+    width: 9%;
+    margin-top: 0;
+    margin-right: 5px;
+    @include flex-box(row, center, center);
+    &:after {
+      content: "";
+      display: block;
+      padding-bottom: 100%;
+    }
   }
 }
 
 .contact-element-text {
   @include respond-to(mobile) {
-    margin-left: 11px;
+    font-size: 3.8vw;
+    margin-left: 8px;
   }
 }
