--- a/src/scss/components/_scroll-element.scss
+++ b/src/scss/components/_scroll-element.scss
@@ -3,7 +3,6 @@
 .bottom-nav-link {
   z-index: 1;
   width: 94px;
-  height: 94px;
   background-color: $color-third;
   position: absolute;
   border-radius: 5px;
@@ -11,6 +10,11 @@
   border: none;
   transform: rotate(45deg);
   font-family: $Open-sans-regular;
+  &:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
 }
 
 .bottom-nav-link-text {
