--- a/src/scss/components/_main-content.scss
+++ b/src/scss/components/_main-content.scss
@@ -4,7 +4,6 @@
   margin-top: 118px;
   width: 580px;
   @include flex-box(column, center, center);
-  z-index: 1;
 }
 
 .content-main-text {
@@ -57,7 +56,6 @@
 
 .contact-element-icon {
   width: 23px;
-  height: 25px;
   margin-right: 5px;
 }
 
@@ -70,12 +68,15 @@
   margin-left: 12px;
   font-size: 16px;
 }
-
 .contact-element-icon-google {
   width: 29px;
-  height: 29px;
   margin-top: 2px;
   margin-right: 3px;
+  &:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
 }
 
 .rotate {
