--- a/src/scss/layouts/_main-content.scss
+++ b/src/scss/layouts/_main-content.scss
@@ -13,6 +13,7 @@
     width: 100%;
     font-size: 5.8vw;
     line-height: 23px;
+    letter-spacing: 0.1px;
   }
 }
 
@@ -33,28 +34,25 @@
 
 .content-main-sub-text {
   @include respond-to(mobile) {
-    font-size: 0.62rem;
+    font-size: 0.60rem;
     line-height: 19px;
-    margin-top: 10.3%;
-    letter-spacing: -0.54px;
+    margin-top: 10.30%;
+    letter-spacing: -0.37px;
   }
 }
 
 .contact-list {
   @include respond-to(mobile) {
-    margin-top: 11.5%;
+    margin-top: 13.5%;
     @include flex-box(column, center, space-between);
   }
 }
 
 .contact-element {
   @include respond-to(mobile) {
-    margin-bottom: 10.5%;
+    margin-bottom: 14.3%;
     margin-left: 3%;
     @include flex-box(row, center, center);
-    &:last-child {
-      margin-top: -1.1%;
-    }
   }
 }
 
@@ -66,27 +64,17 @@
 
 .contact-element-icon {
   @include respond-to(mobile) {
-    width: 9%;
-    @include flex-box(row, center, center);
-    &:after {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }
+    width: 5vw;
+    height: 5vw;
   }
 }
 
 .contact-element-icon-google {
   @include respond-to(mobile) {
-    width: 9%;
+    width: 5vw;
+    height: 5vw;
     margin-top: 0;
     margin-right: 5px;
-    @include flex-box(row, center, center);
-    &:after {
-      content: "";
-      display: block;
-      padding-bottom: 100%;
-    }
   }
 }
 
