--- a/src/scss/layouts/_scroll-element.scss
+++ b/src/scss/layouts/_scroll-element.scss
@@ -1,26 +1,25 @@
 /*stylelint-disable*/
 
-.bottom-button {
+.bottom-nav-link {
   @include respond-to(mobile) {
-    width: 60px;
-    height: 60px;
+    width: 17%;
     top: 96.5%;
     border-radius: 3px;
   }
 }
 
-.bottom-button-text {
+.bottom-nav-link-text {
   @include respond-to(mobile) {
     display: none;
   }
 }
 
-.bottom-button-text-2 {
+.bottom-nav-link-text-2 {
   @include respond-to(mobile) {
     display: block;
-    z-index: 3;
-    top: 4%;
-    right: 76%;
+    z-index: 1;
+    top: 5%;
+    right: 71%;
     font-size: 15px;
   }
 }
