--- a/src/scss/layouts/_container.scss
+++ b/src/scss/layouts/_container.scss
@@ -11,5 +11,7 @@
     background-repeat: no-repeat;
     background-size: 384%;
     background-position: 61% 45%;
+    //background-image: url("../../../images/320x530.png");
+    //background-size: cover;
   }
 }
