--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -2,24 +2,26 @@
 
 .main-header {
   width: 100%;
-  padding-left: 78px;
-  padding-right: 80px;
-  margin-top: 26px;
+  padding-left: 5.5%;
+  padding-right: 5.55%;
+  margin-top: 1.7%;
   @include flex-box(row, space-between, center);
 }
 
 .header {
-  margin-top: 28px;
-  width: 214px;
-  height: 58px;
+  margin-top: 2.4%;
+  width: 16.5%;
   object-fit: cover;
 }
 
+.main-nav{
+  width: 43.1%;
+}
+
 .nav-list {
-  height: 44px;
   text-transform: uppercase;
-  @include flex-box(row, center, center);
   font-family: $Open-sans-regular;
+  @include flex-box(row, flex-start, center);
 }
 
 .nav-list-icons {
@@ -27,11 +29,7 @@
 }
 
 .nav-element {
-  height: 44px;
-  margin-right: 47.8px;
-  padding-right: 8px;
-  line-height: 48px;
-  vertical-align: middle;
+  margin-right: 9%;
   position: relative;
   &:after {
     position: absolute;
@@ -39,19 +37,19 @@
     width: 0;
     height: 3px;
     background-color: $color-third;
-    top:100%;
+    top: 99%;
     left:0;
     transition: $transition;
   }
   &:hover {
     &:after {
-      width: 100%;
+      width: 102%;
     }
   }
 }
 
 .nav-link {
-  font-size: 16px;
+  font-size: 1.25vw;
   color: $color-third;
   font-weight: 600;
   text-decoration: none;
@@ -59,13 +57,13 @@
 
 .contact-button {
   font-family: $Open-sans-regular;
-  width: 146px;
-  height: 45px;
-  font-size: 16px;
+  width: 172%;
+  height: 3.6vw;
+  font-size: 1.25vw;
   font-weight: 600;
   padding-left: 0;
-  margin-left: 5px;
-  margin-top: 2px;
+  margin-left: 5.7%;
+  margin-top: 5%;
   color: $color-third;
   text-transform: uppercase;
   border: 3px solid $color-third;
