--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -2,7 +2,7 @@
 
 .main-header {
   @include respond-to(mobile) {
-    height: 14%;
+    height: 13.8vh;
     margin-top: 0;
     padding: 0;
     @include flex-box(row, center, center);
@@ -11,7 +11,7 @@
 .header {
   @include respond-to(mobile) {
     margin: 0;
-    height: 30px;
+    height: 5.6vh;
     width: 35%;
     z-index: 3;
   }
@@ -26,7 +26,6 @@
     top:0;
     background-color: $color-second;
     margin-top: 0 !important;
-    background-size: cover;
     @include flex-box(column, flex-start, center);
   }
 }
@@ -35,7 +34,7 @@
   @include respond-to(mobile) {
     width: 100%;
     height: 53%;
-    margin-top: 34.5%;
+    margin-top: 21.1vh;
     overflow: hidden;
     @include flex-box(column, flex-start, center);
   }
@@ -44,28 +43,41 @@
 .nav-element {
   @include respond-to(mobile) {
     height: 25px;
-    line-height: 25px;
-    margin-bottom: 15.7%;
+    line-height: 4.6vh;
+    margin-bottom: 9.45vh;
     margin-right: 0;
     padding: 0;
   }
 }
 
-.nav-list-icons {
-  width: 64%;
-  margin-top: 15%;
-  overflow: hidden;
+.nav-link {
   @include respond-to(mobile) {
+    font-size: 5vw;
+  }
+}
+
+.contact-button {
+  @include respond-to(mobile) {
+    font-size: 5vw;
+    line-height: 4.8vw;
+  }
+}
+
+.nav-list-icons {
+  @include respond-to(mobile) {
+    width: 64%;
+    margin-top: 15%;
+    overflow: hidden;
     @include flex-box(row, space-between, center)
   }
 }
 
 .contact-button {
   @include respond-to(mobile) {
-    margin-top: 4%;
-    margin-left: 1px;
-    height: 40px;
-    width: 204px;
+    margin-top: 1.4vh;
+    margin-left: 0;
+    height: 7.7vh;
+    width: 63vw;
     &:hover {
       background-color: transparent;
       color: $color-first;
@@ -83,15 +95,16 @@
 
 .burger-button {
   @include respond-to(mobile) {
-    width: 8vw;
+    width: 9vw;
     position: absolute;
     display: block;
     top: 4.3vh;
-    right: 7.2vw;
+    right: 7.05vw;
     z-index: 3;
     padding: 0;
     background-color: transparent;
     border: none;
+    transition: $transition;
     &:focus {
       outline: none;
     }
