finished tablet RWD and added changes in mobile and desktop

--- a/src/scss/components/_container.scss
+++ b/src/scss/components/_container.scss
@@ -1,15 +1,10 @@
 /*stylelint-disable*/
 
 .container {
-  width: 1440px;
-  height: 900px;
-  background:   linear-gradient(
-      rgba(0, 24, 32, 0.2),
-      rgba(0, 24, 32, 0.2)
-  ),url("./images/jpg-files/bg_image.jpg");
-  background-repeat: no-repeat;
-  background-size: 180% 190%;
-  background-position: 68% 34%;
+  width: 100vw;
+  height: 100vh;
+  @include set-background(182%, 68%, 35%);
   @include flex-box(column, flex-start, center);
   overflow: hidden;
+  position: relative;
 }
