--- a/src/scss/helpers/_mixins.scss
+++ b/src/scss/helpers/_mixins.scss
@@ -9,14 +9,26 @@
   align-items: $align;
 }
 
-// media mixin - credit to http://thesassway.com/intermediate/responsive-web-design-part-2;
+// background image properties
+
+@mixin set-background ($bg-size, $bg-position-x, $bg-position-y) {
+  background:   linear-gradient(
+      rgba(0, 24, 32, 0.2),
+      rgba(0, 24, 32, 0.2)
+  ),url("./images/jpg-files/bg_image.jpg");
+  background-repeat: no-repeat;
+  background-size: $bg-size;
+  background-position: $bg-position-x $bg-position-y;
+}
+
+// media queries mixin - credit to http://thesassway.com/intermediate/responsive-web-design-part-2;
 
 @mixin respond-to($media) {
   @if $media == mobile {
-    @media only screen and (min-width: 320px) and (max-width: 480px) { @content; }
+    @media only screen and (min-width: 320px) and (max-width: 550px) { @content; }
   }
   @else if $media == tablet {
-    @media only screen and (min-width: 768px) and (max-width: 1440px) { @content; }
+    @media only screen and (min-width: 1024px) and (max-width: 1439px) { @content; }
   }
   @else if $media == desktop {
     @media only screen and (min-width: 1440px) { @content; }
