--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -63,7 +63,7 @@
   margin-top: 0.3vh;
   color: $color-third;
   text-transform: uppercase;
-  border: 3px solid $color-third;
+  border: 0.3vw solid $color-third;
   background-color: transparent;
   border-radius: 5px;
   transition: $transition;
