final commit of the project

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -70,7 +70,7 @@
   transition: $transition;
   &:hover {
     background-color: $color-third;
-    color: $color-first;
+    color: $color-second;
   }
   &:focus {
     outline: none;
